--- a/index.html
+++ b/index.html
@@ -130,10 +130,296 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/logo.jpg" alt="" />
+										<img src="images/Dog with glasses.jpg" alt="" />
 									</span>
 									<a href="policies.html">
-										<h2>Coming soon...</h2>
+										<h2>Dog With Glasses</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/Broken Doors.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Broken Doors</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style5">
+									<span class="image">
+										<img src="images/Cancerous brownie.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Cancerous Brownie</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="images/Cracks in the wall.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Cracks In The Wall</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/cubed orange.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Cubed Orange</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style3">
+									<span class="image">
+										<img src="images/Desert.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Desert</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/Jellyfish.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Jellyfish</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style5">
+									<span class="image">
+										<img src="images/Evolution of Avocado.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Evolution Of An Avocado</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="images/Granite.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Granite</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/Lightray.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Lightray</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style3">
+									<span class="image">
+										<img src="images/Teachers bag.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Teacher Bag</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/Menstruation.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Menstruation</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style5">
+									<span class="image">
+										<img src="images/Mountain tops.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Mountain Tops</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="images/Nothing to see here.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Nothing To See Here</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/Nuggets.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Nuggets</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style3">
+									<span class="image">
+										<img src="images/Pear on Shelf.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Pear On Shelf</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/Orange Windows.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Orange Windows</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style5">
+									<span class="image">
+										<img src="images/Pool.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Pool</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style6">
+									<span class="image">
+										<img src="images/Red Eyes.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Red Eyes</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style2">
+									<span class="image">
+										<img src="images/Rainbow in the snow.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Snowy Rainbow</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style3">
+									<span class="image">
+										<img src="images/Stripes no stars.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Stripes, No Stars</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style4">
+									<span class="image">
+										<img src="images/Red Egg.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Red Egg</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style5">
+									<span class="image">
+										<img src="images/Stacked Pots.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Stacked Pots</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style6">
+									<span class="image">
+										<img src="images/Rose foam.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Rosé Foam</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style2">
+									<span class="image">
+										<img src="images/Swimming in the lake.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Swimming In The Lake</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style3">
+									<span class="image">
+										<img src="images/Waves.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Waves</h2>
+										<div class="content">
+											<p>We are about to launch the remaining NFT in the next days.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style4">
+									<span class="image">
+										<img src="images/Writing a letter.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/">
+										<h2>Writing A Letter</h2>
 										<div class="content">
 											<p>We are about to launch the remaining NFT in the next days.</p>
 										</div>
