--- a/policies.html
+++ b/policies.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>ArtGallery_AI Policies</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -58,7 +58,7 @@
 							<p>c355b4756be7b893f1180ce40c30586b9eceb193a49b2a8c6c80b710</p>
 							<p>d9f36137248b7251bad6083f8bec2272524f9aa39e5b158ecf4e9bef</p>
                             <p>f51cf2115e0d9b7b7a9027c113768a11c8aec5d36c449d3b6689862a</p>
-							<p>0060b87a938a4fc570d13bc47f87053decda43cbeb5894a12150735a</p>
+                            <p>0060b87a938a4fc570d13bc47f87053decda43cbeb5894a12150735a</p>
                             <p>0b76e2df426b8a7fef4e6f2bb8747dc8bc3ddb099b9c1709a196362f</p>
                             <p>0e8da29b54d4bfb1c39dade25f6636eddba0fe4e21e529c47fc4c215</p>
                             <p>16c3da3af16977afa1962a886090a4279679732cfc385625133f6052</p>
