--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="policies.html">Policies</a></li>
+                            <li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Now</a></li>
+                            <li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
 
@@ -102,7 +104,7 @@
 									<a href="https://cnft.io/token.php?id=Pl63dFo3yyYPaULke4Dh">
 										<h2>All Roads Lead To Rome</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -132,10 +134,10 @@
 									<span class="image">
 										<img src="images/Dog with glasses.jpg" alt="" />
 									</span>
-									<a href="policies.html">
+									<a href="https://cnft.io/token.php?id=AdBYHYYfP8BJHp8vckw2">
 										<h2>Dog With Glasses</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -143,10 +145,10 @@
 									<span class="image">
 										<img src="images/Broken Doors.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=01fpmNDmpbIJizm9e9RW">
 										<h2>Broken Doors</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -154,10 +156,10 @@
 									<span class="image">
 										<img src="images/Cancerous brownie.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=2skl49ure1hxFcjF5JI3">
 										<h2>Cancerous Brownie</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -165,10 +167,10 @@
 									<span class="image">
 										<img src="images/Cracks in the wall.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=Go20il62UfNHLiKd1qC0">
 										<h2>Cracks In The Wall</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -176,10 +178,10 @@
 									<span class="image">
 										<img src="images/cubed orange.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=qMcni3SbIYv797cXaO8H">
 										<h2>Cubed Orange</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -187,10 +189,10 @@
 									<span class="image">
 										<img src="images/Desert.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=NzxWEqhJTpeKjNb5w6Or">
 										<h2>Desert</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -198,10 +200,10 @@
 									<span class="image">
 										<img src="images/Jellyfish.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=BcRQ183s0JUtkdUIDXLm">
 										<h2>Jellyfish</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -209,10 +211,10 @@
 									<span class="image">
 										<img src="images/Evolution of Avocado.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=T65Q2Hi4feHAdyrW1B7e">
 										<h2>Evolution Of An Avocado</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -220,10 +222,10 @@
 									<span class="image">
 										<img src="images/Granite.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=rz2dgq3LazN5b8EBcBDn">
 										<h2>Granite</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -231,10 +233,10 @@
 									<span class="image">
 										<img src="images/Lightray.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=rBTs3trNeUY9lHQYkYUC">
 										<h2>Lightray</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -242,10 +244,10 @@
 									<span class="image">
 										<img src="images/Teachers bag.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=zg3TdYbeplizzUNCoZFg">
 										<h2>Teacher Bag</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -253,10 +255,10 @@
 									<span class="image">
 										<img src="images/Menstruation.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=PQQE1ZJBPEj9Ceb67J5W">
 										<h2>Menstruation</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -264,10 +266,10 @@
 									<span class="image">
 										<img src="images/Mountain tops.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=diAcxyOlRTTRioKVUTTs">
 										<h2>Mountain Tops</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -275,10 +277,10 @@
 									<span class="image">
 										<img src="images/Nothing to see here.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=Kd0DwJIcyRoIAF70yiV0">
 										<h2>Nothing To See Here</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -286,10 +288,10 @@
 									<span class="image">
 										<img src="images/Nuggets.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=nwZdqmSlUv7Eu4obkuzm">
 										<h2>Nuggets</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -297,10 +299,10 @@
 									<span class="image">
 										<img src="images/Pear on Shelf.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=zCqbV9EVW1rdyjoxG4PB">
 										<h2>Pear On Shelf</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -308,10 +310,10 @@
 									<span class="image">
 										<img src="images/Orange Windows.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=rSZkxq97WjZ52hd2t1Rp">
 										<h2>Orange Windows</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -319,10 +321,10 @@
 									<span class="image">
 										<img src="images/Pool.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=EuUTMiDfUuyBjf5YXszW">
 										<h2>Pool</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -330,10 +332,10 @@
 									<span class="image">
 										<img src="images/Red Eyes.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=XsDXcvQoWneJiO72Ebl3">
 										<h2>Red Eyes</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -341,10 +343,10 @@
 									<span class="image">
 										<img src="images/Rainbow in the snow.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=uO9E9AwDp5TWOyu2kjkf">
 										<h2>Snowy Rainbow</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -352,10 +354,10 @@
 									<span class="image">
 										<img src="images/Stripes no stars.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=KJ6e9DVKJpjy1uR0R6g6">
 										<h2>Stripes, No Stars</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -363,10 +365,10 @@
 									<span class="image">
 										<img src="images/Red Egg.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=vgVxidgPJUmWIaAGPUN4">
 										<h2>Red Egg</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -374,10 +376,10 @@
 									<span class="image">
 										<img src="images/Stacked Pots.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=9jEWPbUBQdrF2B2hDjsE">
 										<h2>Stacked Pots</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -385,10 +387,10 @@
 									<span class="image">
 										<img src="images/Rose foam.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=gYFgewFIV4DoAXL90oEl">
 										<h2>Rosé Foam</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -396,10 +398,10 @@
 									<span class="image">
 										<img src="images/Swimming in the lake.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=IJfa4TPl35LzX9slqHZP">
 										<h2>Swimming In The Lake</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -407,10 +409,10 @@
 									<span class="image">
 										<img src="images/Waves.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=CIeVY1ucQUjPOc5i0i0o">
 										<h2>Waves</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
@@ -418,10 +420,10 @@
 									<span class="image">
 										<img src="images/Writing a letter.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/">
+									<a href="https://cnft.io/token.php?id=BP62FGINLYSNEvKEDDUz">
 										<h2>Writing A Letter</h2>
 										<div class="content">
-											<p>We are about to launch the remaining NFT in the next days.</p>
+											<p>Status: available on CNFT.io</p>
 										</div>
 									</a>
 								</article>
