--- a/policies.html
+++ b/policies.html
@@ -43,6 +43,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
+                            <li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Now</a></li>
+                            <li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
 
