--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 Common : Minted 35 times | live now 3 pcs <br>
 Rare: Minted ? times <br>
 Epic: Minted ? times</p>
-						   
+
 						</div>
 					</div>
 
@@ -79,7 +79,8 @@ Epic: Minted ? times</p>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="https://twitter.com/ArtGallery_AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                                <li><a href="https://discord.gg/QKc8SrpT" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
+                                <li><a href="https://twitter.com/ArtGallery_AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
