--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									<a href="https://cnft.io/token.php?id=cy4MUCLXLSuhntqJx4HT">
 										<h2>Stairs</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -346,7 +346,7 @@
 									<a href="https://cnft.io/token.php?id=uO9E9AwDp5TWOyu2kjkf">
 										<h2>Snowy Rainbow</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
