--- a/about.html
+++ b/about.html
@@ -50,9 +50,14 @@
 						<div class="inner">
 							<h1>About</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>We bring art imagined by a GAN (Generative Adversarial Network) to Cardano. Made with love and passion, on Earth! This is our first step into the NFT world, and which Blockchain could be better than Cardano?</p>
-							<p>Batch #1 has 50 unique NFTs: <br>
-Common : Minted 35 times | live now 3 pcs <br>
+							<h2>About ArtGallery_AI</h2>
+                            <p>We bring art imagined by a GAN (Generative Adversarial Network) to Cardano. Made with love and passion, on Earth! This is our first step into the NFT world, and which Blockchain could be better than Cardano?</p>
+                            <h2>What are GANs?</h2>
+                            <p>GANs or Generative Adversarial Networks were introduced by Ian Goodfellow et. al. in a 2014 paper. GANs address the lack of relative success of deep generative models compared to deep discriminative models. The authors cite the intractability of maximum likelihood estimation, which is necessary for most generative models, as the reason for this discrepancy. GANs are therefore set up to take advantage of the power of deep discriminative models to circumvent the need for maximum likelihood estimation and thus avoid the main flaws of traditional generative models. This is done by using a generative model and a discriminative model that compete with each other to train the generator. </p>
+
+                            <h2>How many NFTs are available</h2>
+                            <p>Batch #1 has 50 unique NFTs: <br>
+Common: Minted 35 times | live now <br>
 Rare: Minted ? times <br>
 Epic: Minted ? times</p>
 
@@ -79,8 +84,9 @@ Epic: Minted ? times</p>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-                                <li><a href="https://discord.gg/QKc8SrpT" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
                                 <li><a href="https://twitter.com/ArtGallery_AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                                <li><a href="https://discord.gg/QKc8SrpT" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
+                                <li><a href="https://t.me/ArtGallery_AI" class="icon brands style2 fa-telegram"><span class="label">Telegram</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
