--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 					</div>
 
 				<!-- Footer -->
-                    <footer id="footer">
+                <footer id="footer">
 						<div class="inner">
 							<section>
 								<ul>
@@ -450,8 +450,9 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-                                <li><a href="https://discord.gg/QKc8SrpT" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
                                 <li><a href="https://twitter.com/ArtGallery_AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                                <li><a href="https://discord.gg/QKc8SrpT" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
+                                <li><a href="https://t.me/ArtGallery_AI" class="icon brands style2 fa-telegram"><span class="label">Telegram</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
