--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 									<a href="https://cnft.io/token.php?id=CIeVY1ucQUjPOc5i0i0o">
 										<h2>Waves</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
