--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
                             <h2>How many NFTs are available</h2>
                             <p>Batch #1 has 50 unique NFTs: <br>
-Common: Minted 35 times | live now <br>
+Common: Minted 35 times | 27 available <br>
 Rare: Minted ? times <br>
 Epic: Minted ? times</p>
 
