--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<div class="inner">
 							<header>
 								<h1>AI generated Artwork as NFT on the <a href="https://cardano.org/">Cardano</a> Blockchain.</h1>
-								<p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. <br> Our very first drop is now available at <a href="https://CNFT.io/">CNFT.io</a></p>
+								<p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. <br> Our very first drop is now available at <a href="https://CNFT.io/">CNFT.io</a>. I'm leaving the country now for 48 hours. I will pause the listings on CNFT.io for the time being. Sorry for the inconvenience.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
